--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<app-cliente></app-cliente>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
