--- a/src/app/cliente/cliente.component.html
+++ b/src/app/cliente/cliente.component.html
@@ -1,6 +1,6 @@
-<div class="container" style="margin-top: 10px;">
+<!--<div class="container" style="margin-top: 10px;">
 <p>Listado de Clientes</p>
-<table class="table table-success table-striped">
+<table class="table table-secondary table-striped">
     <thead>
       <tr>
         <th>Id</th>
@@ -20,4 +20,53 @@
       </tr>
     </tbody>
   </table>
+</div>
+[disabled]="!dataSource.lenght"
+-->
+
+<div class="container">
+  
+  
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
+    <!-- Position Column -->
+    <ng-container matColumnDef="idCliente">
+      <th mat-header-cell *matHeaderCellDef>id</th>
+      <td mat-cell *matCellDef="let cliente">{{cliente.idCliente}}</td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef>Nombre</th>
+      <td mat-cell *matCellDef="let cliente">{{cliente.nombre}}</td>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <ng-container matColumnDef="apellido">
+      <th mat-header-cell *matHeaderCellDef>Apellido</th>
+      <td mat-cell *matCellDef="let cliente">{{cliente.apellido}}</td>
+    </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef>Email</th>
+      <td mat-cell *matCellDef="let cliente">{{cliente.email}}</td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  </table>
+  
+  <div class="demo-button-container">
+    <button mat-raised-button (click)="addClient()" class="demo-button">
+      Agregar
+    </button>
+    <button
+        mat-raised-button
+        (click)="removeClient()"
+        class="demo-button">
+      Eliminar
+    </button>
+  </div>
+  
 </div>
